# lema001

./: .gitignore  MANIFEST.in  PROJECT_SUMMARY.md  PUBLISHING.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py  test_install.py
lema001/: __init__.py  __main__.py
tests/: __init__.py  test_lema001.py
