[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lema001"
version = "0.1.0"
description = "实验项目库 - 所有的实验项目都以 lema 打头后面加序号，这个是第一个项目"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["lema", "experiment", "library", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

requires-python = ">=3.7"

dependencies = [
    # 在这里添加你的项目依赖
    # 例如：requests>=2.28.0
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/yourusername/lema001"
Repository = "https://github.com/yourusername/lema001.git"
Documentation = "https://github.com/yourusername/lema001#readme"
"Bug Tracker" = "https://github.com/yourusername/lema001/issues"

[project.scripts]
lema001 = "lema001:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lema001*"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
